// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResponsiveGridRow /> should render component 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Type
    </span>
  </div>
  <div
    class="c2"
  >
    transfer
  </div>
</div>
`;

exports[`<ResponsiveGridRow /> should render component with a separator 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 6px;
  border-bottom: solid 1px background-front-border;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 12px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      label
    </span>
  </div>
  <div
    class="c2"
  >
    value
  </div>
</div>
`;
